style: fixed container height to see dark mode

--- a/apps/host/src/styles.module.scss
+++ b/apps/host/src/styles.module.scss
@@ -1,6 +1,6 @@
 .containerWrapper {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: var(--bg-body);
   color: var(--text-body);
   padding-block-end: 1rem;
